--- a/extension/manifest.firefox.json
+++ b/extension/manifest.firefox.json
@@ -31,7 +31,16 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "linknest@example.com",
-      "strict_min_version": "109.0"
+      "strict_min_version": "109.0",
+      "data_collection_permissions": {
+        "required": [
+          "bookmarksInfo",
+          "authenticationInfo"
+        ],
+        "optional": [
+          "technicalAndInteraction"
+        ]
+      }
     }
   }
 }
